--- a/Insanity/View/Base.lproj/Main.storyboard
+++ b/Insanity/View/Base.lproj/Main.storyboard
@@ -170,26 +170,26 @@
             </objects>
             <point key="canvasLocation" x="1399.2" y="-182.15892053973016"/>
         </scene>
-        <!--Account View Controller-->
+        <!--Settings-->
         <scene sceneID="4Ok-Hv-3cW">
             <objects>
                 <viewController id="K1O-XM-4Xn" customClass="AccountViewController" customModule="Insanity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bbX-SN-pNx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Ki-Rs-KOP" userLabel="UserView">
-                                <rect key="frame" x="0.0" y="40" width="375" height="80"/>
+                                <rect key="frame" x="0.0" y="56" width="375" height="90"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar13" translatesAutoresizingMaskIntoConstraints="NO" id="Xqm-zk-paJ">
-                                        <rect key="frame" x="20" y="0.0" width="80" height="80"/>
+                                        <rect key="frame" x="20" y="5" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="65j-04-oRI"/>
                                             <constraint firstAttribute="height" constant="80" id="jRG-Yz-ahL"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shouk Shouk" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jax-8d-JcV">
-                                        <rect key="frame" x="120" y="30" width="235" height="20.5"/>
+                                        <rect key="frame" x="120" y="35" width="235" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -201,11 +201,11 @@
                                     <constraint firstItem="Xqm-zk-paJ" firstAttribute="leading" secondItem="1Ki-Rs-KOP" secondAttribute="leading" constant="20" id="ImQ-QQ-Re4"/>
                                     <constraint firstItem="Xqm-zk-paJ" firstAttribute="centerY" secondItem="1Ki-Rs-KOP" secondAttribute="centerY" id="RxA-4W-tcd"/>
                                     <constraint firstAttribute="trailing" secondItem="jax-8d-JcV" secondAttribute="trailing" constant="20" id="cr0-ao-vSd"/>
-                                    <constraint firstAttribute="height" constant="80" id="yxy-zs-cQR"/>
+                                    <constraint firstAttribute="height" constant="90" id="yxy-zs-cQR"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="8i0-Pw-EZs">
-                                <rect key="frame" x="0.0" y="207.5" width="375" height="379.5"/>
+                                <rect key="frame" x="0.0" y="186" width="375" height="401"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Change your pseudonyme" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AGD-Yk-rji">
                                         <rect key="frame" x="40" y="0.0" width="295" height="50"/>
@@ -221,7 +221,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nuD-Ke-ZRR">
-                                        <rect key="frame" x="10" y="148" width="355" height="231.5"/>
+                                        <rect key="frame" x="10" y="148" width="355" height="253"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BWa-K9-uOM">
                                             <size key="itemSize" width="88" height="102"/>
@@ -282,68 +282,31 @@
                                     <action selector="validatePressed:" destination="K1O-XM-4Xn" eventType="touchUpInside" id="eEv-2Z-4Ii"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTx-rQ-ykD" userLabel="CloseView">
-                                <rect key="frame" x="340" y="10" width="25" height="25"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HMP-go-4xV">
-                                        <rect key="frame" x="3" y="0.5" width="19" height="24"/>
-                                        <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wlg-kC-TDK">
-                                        <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
-                                        <connections>
-                                            <action selector="closePressed:" destination="dww-Yy-116" eventType="touchUpInside" id="6RT-KG-hQ7"/>
-                                            <action selector="closePressed:" destination="K1O-XM-4Xn" eventType="touchUpInside" id="o9Q-hP-Lzp"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Wlg-kC-TDK" secondAttribute="trailing" id="0WP-G5-gdW"/>
-                                    <constraint firstItem="HMP-go-4xV" firstAttribute="leading" secondItem="WTx-rQ-ykD" secondAttribute="leading" constant="3" id="8qr-gp-7Rm"/>
-                                    <constraint firstAttribute="height" constant="25" id="EId-tH-I97"/>
-                                    <constraint firstItem="Wlg-kC-TDK" firstAttribute="leading" secondItem="WTx-rQ-ykD" secondAttribute="leading" id="KQZ-uq-NNW"/>
-                                    <constraint firstItem="HMP-go-4xV" firstAttribute="top" secondItem="WTx-rQ-ykD" secondAttribute="top" id="coi-pV-krE"/>
-                                    <constraint firstAttribute="width" constant="25" id="k5z-b1-3jy"/>
-                                    <constraint firstItem="Wlg-kC-TDK" firstAttribute="top" secondItem="WTx-rQ-ykD" secondAttribute="top" id="oWc-ly-xDH"/>
-                                    <constraint firstAttribute="trailing" secondItem="HMP-go-4xV" secondAttribute="trailing" constant="3" id="yIb-EG-lp9"/>
-                                    <constraint firstAttribute="bottom" secondItem="HMP-go-4xV" secondAttribute="bottom" id="yjk-47-VEt"/>
-                                    <constraint firstAttribute="bottom" secondItem="Wlg-kC-TDK" secondAttribute="bottom" id="zJq-LY-jpL"/>
-                                </constraints>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FKZ-lU-bPK">
-                                <rect key="frame" x="40" y="140" width="295" height="17.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="Terms and Conditions" image="info.circle" catalog="system">
-                                    <color key="titleColor" name="BrandOrangeColor"/>
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="light"/>
-                                </state>
-                                <connections>
-                                    <action selector="termsOfUsePressed:" destination="K1O-XM-4Xn" eventType="touchUpInside" id="YIa-yC-zUb"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="1Ki-Rs-KOP" firstAttribute="top" secondItem="6ts-0D-iPU" secondAttribute="top" constant="40" id="0NN-iZ-pmU"/>
-                            <constraint firstItem="WTx-rQ-ykD" firstAttribute="top" secondItem="6ts-0D-iPU" secondAttribute="top" constant="10" id="5E0-vs-6z7"/>
+                            <constraint firstItem="1Ki-Rs-KOP" firstAttribute="top" secondItem="6ts-0D-iPU" secondAttribute="top" id="0NN-iZ-pmU"/>
                             <constraint firstItem="wsw-3l-Civ" firstAttribute="leading" secondItem="6ts-0D-iPU" secondAttribute="leading" id="5oq-3S-las"/>
-                            <constraint firstItem="FKZ-lU-bPK" firstAttribute="top" secondItem="1Ki-Rs-KOP" secondAttribute="bottom" constant="20" id="7Kw-75-AwC"/>
+                            <constraint firstItem="8i0-Pw-EZs" firstAttribute="top" secondItem="1Ki-Rs-KOP" secondAttribute="bottom" constant="40" id="IiZ-Id-iIA"/>
                             <constraint firstItem="6ts-0D-iPU" firstAttribute="trailing" secondItem="wsw-3l-Civ" secondAttribute="trailing" id="P2h-ce-YcZ"/>
                             <constraint firstItem="6ts-0D-iPU" firstAttribute="trailing" secondItem="8i0-Pw-EZs" secondAttribute="trailing" id="PFs-iC-K0E"/>
                             <constraint firstItem="6ts-0D-iPU" firstAttribute="bottom" secondItem="wsw-3l-Civ" secondAttribute="bottom" constant="10" id="PmA-Yl-9M7"/>
                             <constraint firstItem="1Ki-Rs-KOP" firstAttribute="leading" secondItem="6ts-0D-iPU" secondAttribute="leading" id="UPM-sW-VOo"/>
-                            <constraint firstItem="6ts-0D-iPU" firstAttribute="trailing" secondItem="FKZ-lU-bPK" secondAttribute="trailing" constant="40" id="Vhq-Xe-RqW"/>
-                            <constraint firstItem="6ts-0D-iPU" firstAttribute="trailing" secondItem="WTx-rQ-ykD" secondAttribute="trailing" constant="10" id="ZPF-aY-UcZ"/>
-                            <constraint firstItem="8i0-Pw-EZs" firstAttribute="top" secondItem="FKZ-lU-bPK" secondAttribute="bottom" constant="50" id="aSo-xc-bGk"/>
                             <constraint firstItem="wsw-3l-Civ" firstAttribute="top" secondItem="8i0-Pw-EZs" secondAttribute="bottom" constant="10" id="cGC-Oa-ROM"/>
                             <constraint firstItem="8i0-Pw-EZs" firstAttribute="leading" secondItem="bbX-SN-pNx" secondAttribute="leading" id="gpb-Zc-Gyo"/>
-                            <constraint firstItem="FKZ-lU-bPK" firstAttribute="leading" secondItem="6ts-0D-iPU" secondAttribute="leading" constant="40" id="oAs-zr-RUe"/>
                             <constraint firstItem="1Ki-Rs-KOP" firstAttribute="trailing" secondItem="6ts-0D-iPU" secondAttribute="trailing" id="uLw-K7-h3F"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6ts-0D-iPU"/>
                     </view>
-                    <navigationItem key="navigationItem" id="IfA-ED-kNB"/>
+                    <navigationItem key="navigationItem" title="Settings" id="IfA-ED-kNB">
+                        <barButtonItem key="rightBarButtonItem" image="info.circle" catalog="system" id="Ob0-Ya-zCe">
+                            <color key="tintColor" name="BrandOrangeColor"/>
+                            <connections>
+                                <action selector="infoNavButtonPressed:" destination="K1O-XM-4Xn" id="Jf7-hB-YhX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="collectionView" destination="nuD-Ke-ZRR" id="DzJ-m1-Lad"/>
                         <outlet property="currentUserImage" destination="Xqm-zk-paJ" id="tyB-Ch-VjD"/>
@@ -353,7 +316,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hGx-Dw-6Xp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4492" y="-1876"/>
+            <point key="canvasLocation" x="4590" y="-2408"/>
         </scene>
         <!--Followers-->
         <scene sceneID="Kct-jR-cfP">
