--- a/Insanity/View/Base.lproj/Main.storyboard
+++ b/Insanity/View/Base.lproj/Main.storyboard
@@ -822,15 +822,15 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LH0-G3-zyu">
-                                <rect key="frame" x="345" y="5" width="25" height="25"/>
+                                <rect key="frame" x="340" y="5" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="25" id="BQG-qC-dcb"/>
-                                    <constraint firstAttribute="height" constant="25" id="MTu-yE-RYq"/>
+                                    <constraint firstAttribute="width" constant="30" id="BQG-qC-dcb"/>
+                                    <constraint firstAttribute="height" constant="30" id="MTu-yE-RYq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="gear" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default" weight="regular"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="regular"/>
                                 </state>
                                 <connections>
                                     <action selector="accountPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0d9-jW-UwF"/>
